#28 fixed small things
- lists scroll down when data is added
- resize edges are hidden by disabling resizable when overlay is shown
(firefox bug workaround)
- added autocomplete="off" to label input, not sure if that works

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -48,17 +48,16 @@
 	width:75%;
 }
 #selectedPaths {
-	
+	max-height: 315px;
+	overflow: auto;
 }
 #selectedPaths ul{
 	font-family: Verdana, sans-serif;
 	font-size: 10px;
 	line-height: 14px;
 	list-style: none;
-	
-	max-height: 315px;
-	overflow: auto;
 	padding: 0px;
+	margin: 0px;
 }
 #selectedPaths ul li {
 	background-color: #164054;
